--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
         </footer>
         <input type="text" placeholder="Enter your name">
         <button>Send</button>
+        <table>
+            <tr>
+              <th>Company</th>
+              <th>Contact</th>
+              <th>Country</th>
+            </tr>
+            <tr>
+              <td>Alfreds Futterkiste</td>
+              <td>Maria Anders</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td>Centro comercial Moctezuma</td>
+              <td>Francisco Chang</td>
+              <td>Mexico</td>
+            </tr>
+          </table>
+        
         
         <script src="" async defer></script>
     </body>
