created photo gallery

--- a/login.html
+++ b/login.html
@@ -18,7 +18,9 @@
             <input type="password" id="password" name="password" placeholder="Write your Password">
             <button id="button" type="submit">Login</button>
             </form>
-            
+            <div class="signup">
+            <span>Don't have an account? </span><a href="index.html">Sign Up</a>
+            </div>
         </center>
         </div>
         <script src="" async defer></script>
