--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <!--Bootstrap cdn-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     </head>
     <body>
         <header>
@@ -89,6 +91,82 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
+          </div>
+          <div class="container mt-5 text-center custom-class">
+            <h1 class="fw-light text-uppercase border-bottom border-success pb-2 d-inline">About Our Company</h1>
+            <p class="mt-5 fs-5 fw-lighter">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
+          </div>
+          <div class="container-fluid mt-5 custom-background pt-3 pb-3">
+            <div class="row">
+              <div class="col-md-6">
+                <img src="./images/about.jpg" class="img-fluid rounded" alt="about">
+              </div>
+              <div class="col-md-6 custom-class align-self-center">
+                <h2 class="text-center fw-normal mt-3 mt-sm-0">What we do?</h2>
+                <p class="fw-lighter">
+                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="container mt-5 text-center custom-class">
+            <h1 class="fw-light text-uppercase border-bottom border-success pb-2 d-inline">Our Services</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
+              <div class="col">
+                <div class="card pt-3 icon-color own-shadow">
+                  <i class="fas fa-american-sign-language-interpreting fa-5x"></i>
+                  <div class="card-body">
+                    <h5 class="card-title border-top pt-2 fw-bold">Website Design</h5>
+                    <p class="card-text fw-light">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card pt-3 icon-color own-shadow">
+                  <i class="fas fa-analytics fa-5x"></i>
+                  <div class="card-body">
+                    <h5 class="card-title border-top pt-2 fw-bold">Software Development</h5>
+                    <p class="card-text fw-light">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card pt-3 icon-color own-shadow">
+                  <i class="fab fa-algolia fa-5x"></i>
+                  <div class="card-body">
+                    <h5 class="card-title border-top pt-2 fw-bold">Graphics Design</h5>
+                    <p class="card-text fw-light">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card pt-3 icon-color own-shadow">
+                  <i class="fab fa-app-store-ios fa-5x"></i>
+                  <div class="card-body">
+                    <h5 class="card-title border-top pt-2 fw-bold">App Development</h5>
+                    <p class="card-text fw-light">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card pt-3 icon-color own-shadow">
+                  <i class="fas fa-steering-wheel fa-5x"></i>
+                  <div class="card-body">
+                    <h5 class="card-title border-top pt-2 fw-bold">IT Support</h5>
+                    <p class="card-text fw-light">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card pt-3 icon-color own-shadow">
+                  <i class="fas fa-atom fa-5x"></i>
+                  <div class="card-body">
+                    <h5 class="card-title border-top pt-2 fw-bold">Call Center</h5>
+                    <p class="card-text fw-light">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </main>
         <footer>
