javascript date calculator

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     </head>
     <body>
         <header>
@@ -249,7 +248,7 @@
                   <div class="mb-3">
                    <textarea class="form-control" name="message" cols="30" rows="10"></textarea>
                   </div>
-                  <button type="submit" class="btn btn-primary">Send To Us</button>
+                  <button type="submit" class="btn btn-primary btnbtn">Send To Us</button>
                 </form>
               </div>
               <div class="col-md-6" style="height: 500px;">
@@ -310,6 +309,9 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxHRBU_I-JXkZRv1HLG3uoaEV_Pa_HC14&callback=initMap&v=weekly&channel=2"
       async
     ></script>
+    <script>
+     
+    </script>
         
     </body>
 </html>
