--- a/about.html
+++ b/about.html
@@ -51,11 +51,75 @@
                   </div>
               </nav>
         </header>
+        <div class="p-5 mb-4 custombg rounded-3">
+          <div class="container-fluid py-5">
+            <center><h1 class="fw-light text-white text-uppercase border-bottom border-success pb-2 d-inline">About Our Company</h1></center>
+          </div>
+        </div>
         <main>
-            <h1>About Us</h1>
+          <div class="container mt-5 text-center custom-class">
+            <p class="mt-5 fs-5 fw-lighter">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
+          </div>
+          <div class="container mt-5 custom-background pt-3 pb-3">
+            <div class="row">
+              <div class="col-md-6 align-self-center">
+                <img src="./images/about.jpg" class="img-fluid rounded" alt="about">
+              </div>
+              <div class="col-md-6 custom-class align-self-center">
+                <h2 class="text-center fw-normal mt-3 mt-sm-0">What we do?</h2>
+                <p class="fw-lighter">
+                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+                </p>
+              </div>
+            </div>
+          </div>
         </main>
-        <footer>
-
+        <footer class="mt-5 border-top pt-5">
+          <div class="container-fluid">
+            <div class="row mb-3 border-bottom border-1 pb-5">
+              <div class="col-md-3">
+                <img src="./images/logo.png" alt="logo" class="img-fluid">
+                <p class="fw-light">
+                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                </p>
+              </div>
+              <div class="col-md-3">
+                <h5 class="fw-bold list-group-item">Company</h5>
+                <ul class="list-group">
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <h5 class="fw-bold list-group-item">Quick LInks</h5>
+                <ul class="list-group">
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <h5 class="fw-bold list-group-item">Important Menus</h5>
+                <ul class="list-group">
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                  <li class="list-group-item"><a class="text-decoration-none text-dark" href="#">Cras justo odio</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+            <div class="row text-center custom-background align-self-center copyright">
+              <div class="col-md-12">
+                <p>Copyright@2022. All right Reserved</p>
+              </div>
+            </div>
         </footer>
         
         <script src="" async defer></script>
