--- a/login.html
+++ b/login.html
@@ -11,7 +11,30 @@
         <!--Bootstrap cdn-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </head>
+        <style>
+          :root{
+  --main-bg:#e91e63;
+}
+
+.main-bg {
+  background: var(--main-bg) !important;
+}
+
+input:focus, button:focus {
+  border: 1px solid var(--main-bg) !important;
+  box-shadow: none !important;
+}
+
+.form-check-input:checked {
+  background-color: var(--main-bg) !important;
+  border-color: var(--main-bg) !important;
+}
+
+.card, .btn, input{
+  border-radius:0 !important;
+}
+        </style>
+      </head>
     <body>
         <header>
             <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
@@ -52,7 +75,32 @@
               </nav>
         </header>
         <main>
-            <h1>Login Page</h1>
+          <div class="container">
+            <div class="row justify-content-center mt-5">
+              <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="card shadow">
+                  <div class="card-title text-center border-bottom">
+                    <h2 class="p-3">Login</h2>
+                  </div>
+                  <div class="card-body">
+                    <form method="post" action="new.php">
+                      <div class="mb-4">
+                        <label for="username" class="form-label">Your Email</label>
+                        <input type="email" class="form-control" required name="username">
+                      </div>
+                      <div class="mb-4">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" name="password" required>
+                      </div>
+                      <div class="d-grid">
+                        <button type="submit" class="btn text-light main-bg" name="submit">Login</button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </main>
         <footer>
 
